# vivaldi-feed-exporter

./: .gitignore  .prospector.yaml  LICENSE  README.ja.md  README.md  bandit.yaml  pyproject.toml  whitelist.py
tests/: test_vivaldi_feed_exporter.py
tests/vivaldi_feed_exporter/: test_main.py  test_opml.py
vivaldi_feed_exporter/: main.py  opml.py
