[tool.poetry]
name = "vivaldi-feed-exporter"
version = "0.1.0"
description = ""
authors = ["Akira Takahashi <pretty.audience.64b9de@gizmotik.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
prospector = {extras = ["with_bandit", "with_mypy", "with_pyroma", "with_vulture"], version = "^1.7.7"}
black = "^22.3.0"

[tool.poetry.scripts]
vivaldi-feed-exporter = 'vivaldi_feed_exporter.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
