[tool.poetry]
name = "vivaldi-feed-exporter"
version = "0.1.0"
description = "A command line tool to export feeds from Vivaldi as OPML"
license = "MIT"
authors = ["Akira Takahashi <pretty.audience.64b9de@gizmotik.com>"]
readme = "README.md"
repository = "https://github.com/a-takahashi223/vivaldi-feed-exporter"

[tool.poetry.dependencies]
python = "^3.10"
opyml = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
prospector = {extras = ["with_bandit", "with_mypy", "with_pyroma", "with_vulture"], version = "^1.7.7"}
black = "^22.3.0"

[tool.poetry.scripts]
vivaldi-feed-exporter = 'vivaldi_feed_exporter.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
